# limen

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  head-artifacts.md  provider-accounting.md  roadmap.md  route-library.md  sources.md
examples/: route_eval.jsonl
examples/routes/: L0.md  code.md  lora.md  research.md
src/limen/: __init__.py  artifacts.py  cli.py  eval.py  orchestrator.py  providers.py  roles.py  routers.py  routes.py  svf.py  trace.py  workflow.py
tests/: test_cli.py  test_eval.py  test_head_artifacts.py  test_linear_head_router.py  test_openai_provider.py  test_orchestrator.py  test_roles.py  test_route_library.py  test_svf.py  test_trace.py  test_workflow.py
